// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resources.provider.v1;

import "google/api/field_behavior.proto";
import "resources/common/v1/common.proto";
import "validate/validate.proto";

option go_package = "github.com/open-edge-platform/infra-core/apiv2/v2/internal/pbapi/resources/provider/v1;providerv1";

// Kind of provider.
enum ProviderKind {
  PROVIDER_KIND_UNSPECIFIED = 0;
  PROVIDER_KIND_BAREMETAL = 1;
}

// Vendor of the provider.
enum ProviderVendor {
  PROVIDER_VENDOR_UNSPECIFIED = 0;
  PROVIDER_VENDOR_LENOVO_LXCA = 1;
  PROVIDER_VENDOR_LENOVO_LOCA = 2;
}

// A provider resource.
message ProviderResource {
  // Resource ID, generated by the inventory on Create.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^provider-[0-9a-f]{8}$"
      max_bytes: 17
    }
  ];

  // The provider kind.
  ProviderKind provider_kind = 2 [(google.api.field_behavior) = REQUIRED];
  // The provider vendor.
  ProviderVendor provider_vendor = 3;
  // The provider resource's name.
  string name = 4 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      pattern: "^$|^[a-zA-Z-_0-9./: ]+$"
      max_bytes: 40
    }
  ];

  // The provider resource's API endpoint.
  string api_endpoint = 16 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      pattern: "^$|^[a-zA-Z-_0-9./:;=?@!#,<>*() ]+$"
      max_bytes: 500
    }
  ];

  // The provider resource's list of credentials.
  repeated string api_credentials = 17 [(validate.rules).repeated.items.string = {
    pattern: "^[^|]*$" //^$|^[a-zA-Z-_0-9./:;=?@!#,<>*() ]+$
    max_len: 500
  }];

  // Opaque provider configuration.
  string config = 18 [(validate.rules).string = {
    max_bytes: 2000
    pattern: "^$|^[a-zA-Z-_0-9./:;=?@!#,<>*() ]+$" // NEW
  }];

  // The provider resource's unique identifier. Alias of resourceId.
  string providerID = 5001 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^provider-[0-9a-f]{8}$"
      max_bytes: 17
    }
  ];
  // Timestamps associated to the resource.
  resources.common.v1.Timestamps timestamps = 50100 [(google.api.field_behavior) = OUTPUT_ONLY];
}
